WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79059
DefineOwnProperty fails with numeric properties & Object.prototype
https://bugs.webkit.org/show_bug.cgi?id=79059
Summary
DefineOwnProperty fails with numeric properties & Object.prototype
Gavin Barraclough
Reported
2012-02-20 17:36:00 PST
ObjectPrototype caches whether it contains any numeric properties (m_hasNoPropertiesWithUInt32Names), calls to defineOwnProperty need to update this cache.
Attachments
Fix
(6.86 KB, patch)
2012-02-20 17:39 PST
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2012-02-20 17:39:53 PST
Created
attachment 127875
[details]
Fix
Gavin Barraclough
Comment 2
2012-02-20 18:35:12 PST
Fixed in
r108282
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug